--- a/main.tex
+++ b/main.tex
@@ -776,7 +776,7 @@ We present the helium enrichment relation resulting from the PPS model in Figure
 % FIGURE SHOWING HELIUM FOR PPS MODEL
 \begin{figure}
     \centering
-    \includegraphics[width=\linewidth]{../modelling/final_models/population+sun_results/partial_pool/DR14_ASPC/zi_yi_results_plot_2.png}
+    \includegraphics[width=\linewidth]{figures/zi_yi_results_plot.png}
     \caption{The results for initial helium fraction ($Y_\mathrm{init}$) against initial heavy-element fraction ($Z_\mathrm{init}$) for each star from the PPS model are shown by the black markers. The mean helium enrichment, $\mu_Y = Y_P + (\Delta Y / \Delta Z) Z_\mathrm{init}$ with its 68 per cent credible interval are shown in blue by a solid line and shaded region respectively. The population spread, $\mu_Y \pm \sigma_Y$ and its 68 per cent credible interval are shown in orange by a dashed line and shaded region respectively. The individual results from the NP model are shown by the light grey markers.}
     \label{fig:helium}
 \end{figure}
@@ -1089,7 +1089,7 @@ We found some differences between $\mlt$ from our solar model and solar calibrat
 % \end{figure*}
 \begin{figure*}
     \centering
-    \includegraphics[width=\textwidth]{../modelling/final_models/sun_results/SUN/star/corner_plot_2.png}
+    \includegraphics[width=\textwidth]{figures/corner_plot_sun.png}
     \caption{A corner plot showing the sampled marginal and joint posterior distributions for the Sun as a part of the NP model.}
     \label{fig:sun-results}
 \end{figure*}
