Compiled with latex 2020

--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,7 @@
 % Only include extra packages if you really need them. Common packages are:
 \usepackage{graphicx}	% Including figure files
 \usepackage{amsmath}	% Advanced maths commands
-\usepackage{amssymb}	% Extra maths symbols
+% \usepackage{amssymb}	% Extra maths symbols
 \usepackage[
     range-units=single,
     separate-uncertainty=true,
