Added corresponding author details

--- a/main.tex
+++ b/main.tex
@@ -98,8 +98,8 @@
 % The list of authors, and the short list which is used in the headers.
 % If you need two or more lines of authors, add an extra line using \newauthor
 \author[A. J. Lyttle et al.]{%
-Alexander J. Lyttle,$^{1,2}$\thanks{E-mail: ajl573@student.bham.ac.uk}
-Guy R. Davies,$^{1,2}$
+Alexander J. Lyttle,$^{1,2}$\thanks{E-mail: AJL573@student.bham.ac.uk}
+Guy R. Davies,$^{1,2}$\thanks{E-mail: G.R.Davies@bham.ac.uk}
 Tanda Li,$^{1,2}$
 Lindsey M. Carboneau,$^{1,2}$
 \newauthor
