Ammended authors and affiliations

--- a/main.tex
+++ b/main.tex
@@ -103,7 +103,7 @@ Guy R. Davies,$^{1,2}$\thanks{E-mail: G.R.Davies@bham.ac.uk}
 Tanda Li,$^{1,2}$
 Lindsey M. Carboneau,$^{1,2}$
 \newauthor
-Hin Leung,$^{1,2,3}$
+Ho-Hin Leung,$^{3,1,2}$
 Harry Westwood,$^{1,2}$
 William J. Chaplin,$^{1,2}$
 Oliver J. Hall,$^{4,1,2}$
