--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Basic setup. Most papers should leave these options alone.
-\documentclass[a4paper,fleqn,usenatbib]{mnras}
+\documentclass[fleqn,usenatbib]{mnras}
 
 % MNRAS is set in Times font. If you don't have this installed (most LaTeX
 % installations will be fine) or prefer the old Computer Modern fonts, comment
@@ -142,7 +142,7 @@ $^{8}$AIM, CEA, CNRS, Universit\'e Paris-Saclay, Universit\'e Paris Diderot, Sor
 
 % Abstract of the paper <= 250 words
 \begin{abstract}
-    With recent advances in modelling stars using high-precision asteroseismology, the systematic effects associated with our assumptions of stellar helium abundance ($Y$) and the mixing-length theory parameter ($\mlt$) are becoming more important. We apply a new method to improve the inference of stellar parameters for a sample of \emph{Kepler} dwarfs and subgiants across a narrow mass range ($0.8 < M < \SI{1.2}{\solarmass}$). In this method, we include a statistical treatment of $Y$ and the $\mlt$. We develop a hierarchical Bayesian model to encode information about the distribution of $Y$ and $\mlt$ in the population, fitting a linear helium enrichment law including an intrinsic spread around this relation and normal distribution in $\mlt$. We test various levels of pooling parameters, with and without solar data as a calibrator. When including the Sun as a star, we find the gradient for the enrichment law, $\Delta Y / \Delta Z = 1.05\substack{+0.28\\-0.25}$ and the mean $\mlt$ in the population, $\mu_\alpha = 1.90\substack{+0.10\\-0.09}$. While accounting for the uncertainty in $Y$ and $\mlt$, we are still able to report statistical uncertainties of 2.5 per cent in mass, 1.2 per cent in radius, and 12 per cent in age. Our method can also be applied to larger samples which will lead to improved constraints on both the population level inference and the star-by-star fundamental parameters.
+    With recent advances in modelling stars using high-precision asteroseismology, the systematic effects associated with our assumptions of stellar helium abundance ($Y$) and the mixing-length theory parameter ($\alpha_{\rm MLT}$) are becoming more important. We apply a new method to improve the inference of stellar parameters for a sample of \emph{Kepler} dwarfs and subgiants across a narrow mass range ($0.8 < M < 1.2\,\rm M_\odot$). In this method, we include a statistical treatment of $Y$ and the $\alpha_{\rm MLT}$. We develop a hierarchical Bayesian model to encode information about the distribution of $Y$ and $\alpha_{\rm MLT}$ in the population, fitting a linear helium enrichment law including an intrinsic spread around this relation and normal distribution in $\alpha_{\rm MLT}$. We test various levels of pooling parameters, with and without solar data as a calibrator. When including the Sun as a star, we find the gradient for the enrichment law, $\Delta Y / \Delta Z = 1.05\substack{+0.28\\-0.25}$ and the mean $\alpha_{\rm MLT}$ in the population, $\mu_\alpha = 1.90\substack{+0.10\\-0.09}$. While accounting for the uncertainty in $Y$ and $\alpha_{\rm MLT}$, we are still able to report statistical uncertainties of 2.5 per cent in mass, 1.2 per cent in radius, and 12 per cent in age. Our method can also be applied to larger samples which will lead to improved constraints on both the population level inference and the star-by-star fundamental parameters.
 \end{abstract}
 
 % Select between one and six entries from the list of approved keywords.
@@ -201,7 +201,7 @@ The final sample comprised 81 stars for which we had complete data for $\teff$, 
 
 \begin{table*}
 	\centering
-	\caption{The observables and their respective uncertainties for the 10 stars in sample of 81 stars. The whole table is available online.}
+	\caption{The observables and their respective uncertainties for 10 stars in the sample of 81 stars. The whole table is available online.}
 	\label{tab:data}
 	\input{tables/stars_inputs.tex}
 \end{table*}
