Added data availability section

--- a/main.tex
+++ b/main.tex
@@ -144,7 +144,7 @@ $^{8}$AIM, CEA, CNRS, Universit\'e Paris-Saclay, Universit\'e Paris Diderot, Sor
 % Don't make up new ones.
 \begin{keywords}
 
-asteroseismology -- stars: fundamental parameters -- stars: low-mass -- stars: oscillations -- stars: solar-type -- stars: statistics
+asteroseismology -- stars: fundamental parameters -- stars: statistics
 
 \end{keywords}
 
@@ -800,6 +800,14 @@ Including all-sky data from \emph{TESS} and in anticipation of \emph{PLATO} \cit
 %%%%%%%%%%%%%%%% ACKNOWLEDGEMENTS %%%%%%%%%%%%%%%%
 
 This work is a part of a project that has received funding from the European Research Council (ERC) under the European Union’s Horizon 2020 research and innovation programme (CartographY; grant agreement ID 804752). A.J.L., G.R.D., and W.J.C. acknowledge the support of the Science and Technology Facilities Council. D.H. acknowledges support from the Alfred P. Sloan Foundation, the National Aeronautics and Space Administration (80NSSC19K0597), and the National Science Foundation (AST-1717000). M.B.N. acknowledges support from the UK Space Agency. R.A.G. acknowledges the funding from the PLATO CNES grant. We thank Ilya Mandel and Sean Matt for their discussion regarding this work.
+
+\section*{Data Availability}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%% DATA AVAILABILITY %%%%%%%%%%%%%%%%
+
+The data underlying this article are available in the article, in its online supplementary material, and in Zenodo, at https://dx.doi.org/[doi to be published upon acceptance].
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
