--- a/main.tex
+++ b/main.tex
@@ -196,7 +196,7 @@ The final sample comprised 81 stars for which we had complete data for $\teff$, 
 
 \begin{table*}
 	\centering
-	\caption{The observables and their respective uncertainties for 10 stars in the sample of 81 stars. The whole table is available online.}
+	\caption{The observables and their respective uncertainties for 10 stars in the sample of 81 stars. The whole table is available \textbf{\color{red} as supplementary material}.}
 	\label{tab:data}
 	\input{tables/stars_inputs.tex}
 \end{table*}
@@ -592,7 +592,7 @@ In Table \ref{tab:np}, we present results for the 65 APOKASC stars from the NP m
 
 \begin{table*}
 	\centering
-	\caption{The median of the marginalised posterior samples for each parameter output by the NP model, with their respective upper and lower 68 per cent credible intervals. For the full table, see online.}
+	\caption{The median of the marginalised posterior samples for each parameter output by the NP model, with their respective upper and lower 68 per cent credible intervals. \textbf{\color{red} The full table is available as supplementary material}.}
 	\label{tab:np}
 	\input{tables/stars_outputs_NP.tex}
 \end{table*}
